--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,13 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@fullcalendar/core": "^5.6.0",
-    "@fullcalendar/daygrid": "^5.6.0",
-    "@fullcalendar/react": "^5.6.0",
-    "@fullcalendar/timegrid": "^5.6.0",
     "cheerio": "^1.0.0-rc.5",
     "ical-generator": "^1.15.4",
     "next": "10.0.9",
     "node-fetch": "^2.6.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-if": "^4.0.1"
   },
   "devDependencies": {
     "@sapphire/eslint-config": "^3.0.2",
